@@ -30,7 +30,7 @@
 #include <assert.h>
 #include "proto.h"
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
 #ifdef HAVE_WCHAR_H
 #include <wchar.h>
 #endif
@@ -47,7 +47,7 @@ bool nisblank(int c)
 }
 #endif
 
-#if !defined(HAVE_ISWBLANK) && defined(NANO_WIDE)
+#if !defined(HAVE_ISWBLANK) && defined(ENABLE_UTF8)
 /* This function is equivalent to iswblank(). */
 bool niswblank(wchar_t wc)
 {
@@ -67,7 +67,7 @@ bool is_alnum_mbchar(const char *c)
 {
     assert(c != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	wchar_t wc;
 	int c_mb_len = mbtowc(&wc, c, MB_CUR_MAX);
@@ -88,7 +88,7 @@ bool is_blank_mbchar(const char *c)
 {
     assert(c != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	wchar_t wc;
 	int c_mb_len = mbtowc(&wc, c, MB_CUR_MAX);
@@ -112,7 +112,7 @@ bool is_cntrl_char(int c)
 	(127 <= c && c < 160);
 }
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
 /* This function is equivalent to iscntrl() for wide characters, except
  * in that it also handles wide control characters with their high bits
  * set. */
@@ -129,7 +129,7 @@ bool is_cntrl_mbchar(const char *c)
 {
     assert(c != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	wchar_t wc;
 	int c_mb_len = mbtowc(&wc, c, MB_CUR_MAX);
@@ -150,7 +150,7 @@ bool is_punct_mbchar(const char *c)
 {
     assert(c != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	wchar_t wc;
 	int c_mb_len = mbtowc(&wc, c, MB_CUR_MAX);
@@ -190,7 +190,7 @@ char control_rep(char c)
 	return c + 64;
 }
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
 /* c is a wide control character.  It displays as ^@, ^?, or ^[ch],
  * where ch is (c + 64).  We return that wide character. */
 wchar_t control_wrep(wchar_t wc)
@@ -211,7 +211,7 @@ char *control_mbrep(const char *c, char *crep, int *crep_len)
 {
     assert(c != NULL && crep != NULL && crep_len != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	wchar_t wc;
 
@@ -230,7 +230,7 @@ char *control_mbrep(const char *c, char *crep, int *crep_len)
 #endif
 	*crep_len = 1;
 	*crep = control_rep(*c);
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     }
 #endif
 
@@ -242,7 +242,7 @@ int mbwidth(const char *c)
 {
     assert(c != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	wchar_t wc;
 	int c_mb_len = mbtowc(&wc, c, MB_CUR_MAX), width;
@@ -267,7 +267,7 @@ int mbwidth(const char *c)
 int mb_cur_max(void)
 {
     return
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
 	ISSET(USE_UTF8) ? MB_CUR_MAX :
 #endif
 	1;
@@ -284,7 +284,7 @@ char *make_mbchar(int chr, int *chr_mb_len)
 
     assert(chr_mb_len != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	chr_mb = charalloc(MB_CUR_MAX);
 	*chr_mb_len = wctomb(chr_mb, chr);
@@ -297,7 +297,7 @@ char *make_mbchar(int chr, int *chr_mb_len)
 #endif
 	*chr_mb_len = 1;
 	chr_mb = mallocstrncpy(NULL, (char *)&chr, 1);
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     }
 #endif
 
@@ -319,7 +319,7 @@ int parse_mbchar(const char *buf, char *chr, bool *bad_chr, size_t
     if (bad_chr != NULL)
 	*bad_chr = FALSE;
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	/* Get the number of bytes in the multibyte character. */
 	buf_mb_len = mblen(buf, MB_CUR_MAX);
@@ -393,7 +393,7 @@ int parse_mbchar(const char *buf, char *chr, bool *bad_chr, size_t
 	    else
 		(*col)++;
 	}
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     }
 #endif
 
@@ -466,7 +466,7 @@ int nstrncasecmp(const char *s1, const char *s2, size_t n)
  * strings. */
 int mbstrncasecmp(const char *s1, const char *s2, size_t n)
 {
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	char *s1_mb = charalloc(MB_CUR_MAX);
 	char *s2_mb = charalloc(MB_CUR_MAX);
@@ -536,7 +536,7 @@ const char *nstrcasestr(const char *haystack, const char *needle)
 /* This function is equivalent to strcasestr() for multibyte strings. */
 const char *mbstrcasestr(const char *haystack, const char *needle)
 {
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	char *r_mb = charalloc(MB_CUR_MAX);
 	char *q_mb = charalloc(MB_CUR_MAX);
@@ -642,7 +642,7 @@ const char *revstrcasestr(const char *haystack, const char *needle,
 const char *mbrevstrcasestr(const char *haystack, const char *needle,
 	const char *rev_start)
 {
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	char *r_mb = charalloc(MB_CUR_MAX);
 	char *q_mb = charalloc(MB_CUR_MAX);
@@ -730,7 +730,7 @@ size_t mbstrnlen(const char *s, size_t maxlen)
 {
     assert(s != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	size_t n = 0;
 	int s_mb_len;
@@ -774,7 +774,7 @@ bool has_blank_mbchars(const char *s)
 {
     assert(s != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	char *chr_mb = charalloc(MB_CUR_MAX);
 	bool retval = FALSE;
@@ -806,7 +806,7 @@ char *mbstrchr(const char *s, char *c)
 {
     assert(s != NULL && c != NULL);
 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
     if (ISSET(USE_UTF8)) {
 	char *s_mb = charalloc(MB_CUR_MAX);
 	const char *q = s;
@@ -853,7 +853,7 @@ bool is_valid_mbstring(const char *s)
     assert(s != NULL);
 
     return 
-#ifdef NANO_WIDE
+#ifdef ENABLE_UTF8
 	ISSET(USE_UTF8) ?
 	(mbstowcs(NULL, s, 0) != (size_t)-1) :
 #endif
